CPParser/Parser.cs
using CPParser;



using System;



public class Parser {
	public const int _EOF = 0;
	public const int _ident = 1;
	public const int _integer = 2;
	public const int _real = 3;
	public const int _character = 4;
	public const int _string = 5;
	public const int maxT = 74;

	const bool _T = true;
	const bool _x = false;
	const int minErrDist = 2;
	
	public Scanner scanner;
	public Errors  errors;

	public Token t;    // last recognized token
	public Token la;   // lookahead token
	int errDist = minErrDist;

public Common.SymTable.SymTab symTab = new ();
	public CPParser.Ast.Module module; 

	bool IsEmptyProc(){
		return t.val == "ABSTRACT" || t.val == "EMPTY";
	}


	public Parser(Scanner scanner) {
		this.scanner = scanner;
		errors = new Errors();
	}

	void SynErr (int n) {
		if (errDist >= minErrDist) errors.SynErr(la.line, la.col, n);
		errDist = 0;
	}

	public void SemErr (string msg) {
		if (errDist >= minErrDist) errors.SemErr(t.line, t.col, msg);
		errDist = 0;
	}
	
	void Get () {
		for (;;) {
			t = la;
			la = scanner.Scan();
			if (la.kind <= maxT) { ++errDist; break; }

			la = t;
		}
	}
	
	void Expect (int n) {
		if (la.kind==n) Get(); else { SynErr(n); }
	}
	
	bool StartOf (int s) {
		return set[s, la.kind];
	}
	
	void ExpectWeak (int n, int follow) {
		if (la.kind == n) Get();
		else {
			SynErr(n);
			while (!StartOf(follow)) Get();
		}
	}


	bool WeakSeparator(int n, int syFol, int repFol) {
		int kind = la.kind;
		if (kind == n) {Get(); return true;}
		else if (StartOf(repFol)) {return false;}
		else {
			SynErr(n);
			while (!(set[syFol, kind] || set[repFol, kind] || set[0, kind])) {
				Get();
				kind = la.kind;
			}
			return StartOf(syFol);
		}
	}

	
	void CP() {
		Module(out module);
	}

	void Module(out CPParser.Ast.Module o) {
		o = new CPParser.Ast.Module(); 
		Expect(6);
		Ident(out o.Ident);
		Expect(7);
		symTab.OpenScope(o.Ident.Name); 
		if (la.kind == 13) {
			ImportList(out o.ImportList);
		}
		DeclSeq(out o.DeclSeq);
		if (la.kind == 8) {
			Get();
			StatementSeq(out o.Begin);
		}
		if (la.kind == 9) {
			Get();
			StatementSeq(out o.Close);
		}
		Expect(10);
		Expect(1);
		Expect(11);
	}

	void Ident(out CPParser.Ast.Ident o) {
		Expect(1);
		o = new CPParser.Ast.Ident{Name = t.val}; 
	}

	void Number(out CPParser.Ast.Number o) {
		o = null; 
		if (la.kind == 2) {
			Get();
			o = new CPParser.Ast.Number{Value = t.val}; 
		} else if (la.kind == 3) {
			Get();
			o = new CPParser.Ast.Number{Value = t.val}; 
		} else SynErr(75);
	}

	void ImportList(out CPParser.Ast.AstList o) {
		o = new CPParser.Ast.AstList(); 
		Expect(13);
		ImportedModule(o);
		while (la.kind == 14) {
			Get();
			ImportedModule(o);
		}
		Expect(7);
	}

	void DeclSeq(out CPParser.Ast.DeclSeq o) {
		o = new CPParser.Ast.DeclSeq(); 
		while (la.kind == 15 || la.kind == 16 || la.kind == 17) {
			if (la.kind == 15) {
				Get();
				var lst = new CPParser.Ast.IConstTypeVarListDecl.ConstDeclList(); 
				while (la.kind == 1) {
					ConstDecl(lst.Values);
					Expect(7);
				}
				o.ConstTypeVarDecls.Add(lst); 
			} else if (la.kind == 16) {
				Get();
				var lst = new CPParser.Ast.IConstTypeVarListDecl.TypeDeclList(); 
				while (la.kind == 1) {
					TypeDecl(lst.Values);
					Expect(7);
				}
				o.ConstTypeVarDecls.Add(lst); 
			} else {
				Get();
				var lst = new CPParser.Ast.IConstTypeVarListDecl.VarDeclList(); 
				while (la.kind == 1) {
					VarDecl(lst.Values);
					Expect(7);
				}
				o.ConstTypeVarDecls.Add(lst); 
			}
		}
		while (la.kind == 18) {
			Get();
			if (la.kind == 1 || la.kind == 26) {
				ProcDecl(o.ProcForwardDecls);
			} else if (la.kind == 21) {
				ForwardDecl(o.ProcForwardDecls);
			} else SynErr(76);
			Expect(7);
		}
	}

	void StatementSeq(out CPParser.Ast.StatementSeq o) {
		o = new CPParser.Ast.StatementSeq(); CPParser.Ast.IStatement s; 
		Statement(out s);
		o.Statements.Add(s); 
		while (la.kind == 7) {
			Get();
			Statement(out s);
			o.Statements.Add(s); 
		}
	}

	void ImportedModule(CPParser.Ast.AstList i) {
		var o = new CPParser.Ast.Import(); 
		Ident(out o.Name);
		if (la.kind == 12) {
			Get();
			Ident(out o.OriginalName);
		}
		i.Add(o); 
	}

	void ConstDecl(CPParser.Ast.AstList lst) {
		var o = new CPParser.Ast.ConstDecl(); 
		IdentDef(out o.IdentDef);
		Expect(19);
		ConstExpr(out o.ConstExpr);
		lst.Add(o); 
		symTab.Insert(o.GetObj());  
	}

	void TypeDecl(CPParser.Ast.AstList lst) {
		var o = new CPParser.Ast.TypeDecl(); 
		IdentDef(out o.IdentDef);
		Expect(19);
		Type(out o.Type_);
		lst.Add(o); 
		symTab.Insert(o.GetObj()); 
	}

	void VarDecl(CPParser.Ast.AstList lst) {
		var o = new CPParser.Ast.VarDecl(); 
		IdentList(out o.IdentList);
		Expect(20);
		Type(out o.Type_);
		lst.Add(o); 
		symTab.Insert(o.GetObjects());  
	}

	void ProcDecl(CPParser.Ast.AstList lst) {
		var o = new CPParser.Ast.ProcDecl(); 
		if (la.kind == 26) {
			Receiver(out o.Receiver);
		}
		IdentDef(out o.IdentDef);
		symTab.OpenScope(o.IdentDef.Ident.Name); 
		if (la.kind == 26) {
			FormalPars(out o.FormalPars);
		}
		MethAttributes(out o.MethAttributes);
		if (!IsEmptyProc()) {
			Expect(7);
			DeclSeq(out o.DeclSeq);
			if (la.kind == 8) {
				Get();
				StatementSeq(out o.StatementSeq);
			}
			Expect(10);
			Expect(1);
		}
		symTab.CloseScope();lst.Add(o); 
		symTab.Insert(o.GetObj()); 
	}

	void ForwardDecl(CPParser.Ast.AstList lst) {
		var o = new CPParser.Ast.ForwardDecl(); 
		Expect(21);
		if (la.kind == 26) {
			Receiver(out o.Receiver);
		}
		IdentDef(out o.IdentDef);
		if (la.kind == 26) {
			FormalPars(out o.FormalPars);
		}
		MethAttributes(out o.MethAttributes);
		lst.Add(o); 
	}

	void IdentDef(out CPParser.Ast.IdentDef o) {
		o = new CPParser.Ast.IdentDef (); 
		Ident(out o.Ident);
		if (la.kind == 54 || la.kind == 66) {
			if (la.kind == 66) {
				Get();
				o.Export = CPParser.Ast.IdentDef.IdentExport.Export; 
			} else {
				Get();
				o.Export = CPParser.Ast.IdentDef.IdentExport.ExportReadonly; 
			}
		}
	}

	void ConstExpr(out CPParser.Ast.ConstExpr o) {
		o = new CPParser.Ast.ConstExpr(); 
		Expr(out o.Expr);
	}

	void Type(out CPParser.Ast.IType o) {
		o = null; 
		if (la.kind == 1) {
			var at = new CPParser.Ast.IType.SynonimType(); 
			Qualident(out at.Qualident);
			o = at; 
		} else if (la.kind == 30) {
			Get();
			var at = new CPParser.Ast.IType.ArrayType(); CPParser.Ast.ConstExpr ce; 
			if (StartOf(1)) {
				ConstExpr(out ce);
				at.ConstExprs.Add(ce); 
				while (la.kind == 14) {
					Get();
					ConstExpr(out ce);
					at.ConstExprs.Add(ce); 
				}
			}
			Expect(31);
			Type(out at.Type_);
			o = at; 
		} else if (StartOf(2)) {
			var at = new CPParser.Ast.IType.RecordType(); 
			if (la.kind == 22 || la.kind == 24 || la.kind == 32) {
				if (la.kind == 22) {
					Get();
					at.RecordMeta = CPParser.Ast.IType.RecordType.Meta.ABSTRACT; 
				} else if (la.kind == 24) {
					Get();
					at.RecordMeta = CPParser.Ast.IType.RecordType.Meta.EXTENSIBLE; 
				} else {
					Get();
					at.RecordMeta = CPParser.Ast.IType.RecordType.Meta.LIMITED; 
				}
			}
			Expect(33);
			if (la.kind == 26) {
				Get();
				Qualident(out at.Qualident);
				Expect(27);
			}
			var fl = new CPParser.Ast.FieldList(); 
			FieldList(out fl);
			at.FieldList.Add(fl); 
			while (la.kind == 7) {
				Get();
				FieldList(out fl);
				at.FieldList.Add(fl); 
			}
			Expect(10);
			o = at; 
		} else if (la.kind == 34) {
			var at = new CPParser.Ast.IType.PointerType(); 
			Get();
			Expect(35);
			Type(out at.Type_);
			o = at; 
		} else if (la.kind == 18) {
			var at = new CPParser.Ast.IType.ProcedureType(); 
			Get();
			if (la.kind == 26) {
				FormalPars(out at.FormalPars);
			}
			o = at; 
		} else SynErr(77);
	}

	void IdentList(out CPParser.Ast.IdentList o) {
		o = new CPParser.Ast.IdentList(); var id = new CPParser.Ast.IdentDef(); 
		IdentDef(out id);
		o.IdentDefs.Add(id); 
		while (la.kind == 14) {
			Get();
			id = new CPParser.Ast.IdentDef(); 
			IdentDef(out id);
			o.IdentDefs.Add(id); 
		}
	}

	void Receiver(out CPParser.Ast.Receiver o) {
		o = new CPParser.Ast.Receiver(); 
		Expect(26);
		if (la.kind == 17 || la.kind == 28) {
			if (la.kind == 17) {
				Get();
				o.ReceiverPrefix = CPParser.Ast.Receiver.Prefix.VAR; 
			} else {
				Get();
				o.ReceiverPrefix = CPParser.Ast.Receiver.Prefix.IN; 
			}
		}
		Ident(out o.SelfIdent);
		Expect(20);
		Ident(out o.TypeIdent);
		Expect(27);
	}

	void FormalPars(out CPParser.Ast.FormalPars o) {
		o = new CPParser.Ast.FormalPars(); 
		Expect(26);
		if (StartOf(3)) {
			FPSection(o.FPSections);
			while (la.kind == 7) {
				Get();
				FPSection(o.FPSections);
			}
		}
		Expect(27);
		if (la.kind == 20) {
			Get();
			Type(out o.Type_);
		}
	}

	void MethAttributes(out CPParser.Ast.MethAttributes o) {
		o = new CPParser.Ast.MethAttributes(); 
		if (la.kind == 14) {
			Get();
			if (la.kind == 25) {
				NewMethAttr(o);
				Expect(14);
				MethAttr(out o.Attr);
			} else if (la.kind == 22 || la.kind == 23 || la.kind == 24) {
				MethAttr(out o.Attr);
			} else SynErr(78);
		}
	}

	void MethAttr(out CPParser.Ast.MethAttributes.MethodAttr? o) {
		o = null; 
		if (la.kind == 22) {
			Get();
			o = CPParser.Ast.MethAttributes.MethodAttr.ABSTRACT; 
		} else if (la.kind == 23) {
			Get();
			o = CPParser.Ast.MethAttributes.MethodAttr.EMPTY; 
		} else if (la.kind == 24) {
			Get();
			o = CPParser.Ast.MethAttributes.MethodAttr.EXTENSIBLE; 
		} else SynErr(79);
	}

	void NewMethAttr(CPParser.Ast.MethAttributes o) {
		Expect(25);
		o.IsNew = true; 
	}

	void FPSection(CPParser.Ast.AstList lst) {
		var o = new CPParser.Ast.FPSection(); 
		if (la.kind == 17 || la.kind == 28 || la.kind == 29) {
			if (la.kind == 17) {
				Get();
				o.FpSectionPrefix = CPParser.Ast.FPSection.Prefix.VAR; 
			} else if (la.kind == 28) {
				Get();
				o.FpSectionPrefix = CPParser.Ast.FPSection.Prefix.IN; 
			} else {
				Get();
				o.FpSectionPrefix = CPParser.Ast.FPSection.Prefix.OUT; 
			}
		}
		CPParser.Ast.Ident i; 
		Ident(out i);
		o.Idents.Add(i); 
		while (la.kind == 14) {
			Get();
			Ident(out i);
			o.Idents.Add(i); 
		}
		Expect(20);
		Type(out o.Type_);
		lst.Add(o); 
	}

	void Qualident(out CPParser.Ast.Qualident o) {
		o = new CPParser.Ast.Qualident(symTab); 
		Ident(out o.Ident1);
		if (la.kind == 11) {
			Get();
			Ident(out o.Ident2);
		}
	}

	void FieldList(out CPParser.Ast.FieldList o) {
		o = null; 
		if (la.kind == 1) {
			o = new CPParser.Ast.FieldList(); 
			IdentList(out o.IdentList);
			Expect(20);
			Type(out o.Type_);
		}
	}
